--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,7 +111,7 @@ jobs:
       ################## UNIT TESTS ##################
       - swapref:
           proj: src/tests/Mathtone.Sdk.Common.Tests/Mathtone.Sdk.Common.Tests.csproj
-          ref: ../../sdk/Mathtone.Sdk.Common/Mathtone.Common.csproj
+          ref: ../../sdk/Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
           pkg: Mathtone.Common
 
       - swapref:
