--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,12 +117,12 @@ jobs:
       - swapref:
           proj: src/tests/Mathtone.Sdk.Logging.Tests/Mathtone.Sdk.Logging.Tests.csproj
           ref: ../../sdk/Mathtone.Sdk.Logging/Mathtone.Logging.csproj
-          pkg: Mathtone.Logging
+          pkg: Mathtone.Sdk.Logging
       
       - swapref:
           proj: src/tests/Mathtone.Sdk.Utilities.Tests/Mathtone.Sdk.Utilities.Tests.csproj
           ref: ../../sdk/Mathtone.Sdk.Utilities/Mathtone.Logging.csproj
-          pkg: Mathtone.Utilities
+          pkg: Mathtone.Sdk.Utilities
       
       - swapref:
           proj: src/tests/Mathtone.Sdk.Utilities.Tests/Mathtone.Sdk.Utilities.Tests.csproj
