--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,7 +162,14 @@ jobs:
           proj: src/tests/Mathtone.Sdk.Data.Npgsql.Tests/Mathtone.Sdk.Data.Npgsql.Tests.csproj
           ref: ../../sdk/Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
           pkg: Mathtone.Sdk.Data.Npgsql
-     
+      - run: dotnet restore src/mathtone-magic.sln
+      # - 
+      - run: dotnet test src/tests/Mathtone.Sdk.Common.Tests/Mathtone.Sdk.Common.Tests.csproj --configuration Release
+      - run: dotnet test src/tests/Mathtone.Sdk.Utilities.Tests/Mathtone.Sdk.Utilities.Tests.csproj --configuration Release
+      - run: dotnet test src/tests/Mathtone.Sdk.Logging.Tests/Mathtone.Sdk.Logging.Tests.csproj --configuration Release
+      # - run:
+      #     name: Build & Test Solution (Release)
+      #     command: dotnet test src/tests/Mathtone.Sdk.Common.Tests/Mathtone.Sdk.Common.Tests.csproj --configuration Release #--results-directory test-results --logger "trx;logfilename=mytests.trx"
       # swap Mathtone.Sdk.Data.Npgsql
       #- swapref:
       #    proj: src/sdk/Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
@@ -217,11 +224,11 @@ jobs:
       #    proj: src/tests/Mathtone.Sdk.Tests/Mathtone.Sdk.Tests.csproj
       #    ref: ../Mathtone.Sdk/Mathtone.Sdk.csproj
       #    pkg: Mathtone.Sdk
-      - run: dotnet restore src/mathtone-magic.sln
-      # - 
-      - run:
-          name: Build & Test Solution (Release)
-          command: dotnet test src/mathtone-magic.sln --configuration Release #--results-directory test-results --logger "trx;logfilename=mytests.trx"
+      # - run: dotnet restore src/mathtone-magic.sln
+      # # - 
+      # - run:
+      #     name: Build & Test Solution (Release)
+      #     command: dotnet test src/mathtone-magic.sln --configuration Release #--results-directory test-results --logger "trx;logfilename=mytests.trx"
       
       - persist_to_workspace:
           root: .
