--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,8 +178,8 @@ jobs:
       - run: dotnet test src/tests/Mathtone.Sdk.Utilities.Tests/Mathtone.Sdk.Utilities.Tests.csproj --configuration Release
       - run: dotnet test src/tests/Mathtone.Sdk.Logging.Tests/Mathtone.Sdk.Logging.Tests.csproj --configuration Release
       - run: dotnet test src/tests/Mathtone.Sdk.Data.Tests/Mathtone.Sdk.Data.Tests.csproj --configuration Release
-      - run: dotnet test src/tests/Mathtone.Sdk.Data.Sql.Tests/Mathtone.Sdk.Sql.Data.Tests.csproj --configuration Release
-      - run: dotnet test src/tests/Mathtone.Sdk.Data.Npgsql.Tests/Mathtone.Sdk.Npgsql.Data.Tests.csproj --configuration Release
+      - run: dotnet test src/tests/Mathtone.Sdk.Data.Sql.Tests/Mathtone.Sdk.Data.Sql.Tests.csproj --configuration Release
+      - run: dotnet test src/tests/Mathtone.Sdk.Data.Npgsql.Tests/Mathtone.Sdk.Data.Npgsql.Tests.csproj --configuration Release
       # - run:
       #     name: Build & Test Solution (Release)
       #     command: dotnet test src/mathtone-magic.sln --configuration Release #--results-directory test-results --logger "trx;logfilename=mytests.trx"
