--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,8 +171,8 @@ jobs:
           pkg: Mathtone.Sdk.Testing.Xunit
       - swapref:
           proj: src/tests/Mathtone.Sdk.Data.Tests/Mathtone.Sdk.Data.Tests.csproj
-          ref: ../../sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
-          pkg: Mathtone.Sdk.Testing.Xunit
+          ref: ../../sdk/Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
+          pkg: Mathtone.Sdk.Data
 
       - swapref:
           proj: src/tests/Mathtone.Sdk.Data.Sql.Tests/Mathtone.Sdk.Data.Sql.Tests.csproj
