--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,6 @@ commands:
           command: |
             dotnet remove << parameters.proj >> reference << parameters.ref >>
             dotnet add << parameters.proj >> package << parameters.pkg >> --source ./packages --prerelease
-      
   pack-proj:
     parameters:
       proj:
@@ -38,241 +37,12 @@ commands:
             fi
             
 jobs:
-
-  prep-project:
+  pack-core:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
     working_directory: /mnt/ramdisk
     steps:
       - checkout
-      - run: |
-          branch=$CIRCLE_BRANCH
-          ver=${branch/"release/"/""}
-          suffix=${ver#*-}
-          build=${ver%-*}
-          echo build- ${build} version- ${suffix}
-  run-unit-tests:
-    docker:
-      - image: mcr.microsoft.com/dotnet/sdk:6.0
-      - image: postgres
-        environment:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: test!1234
-      - image: mcr.microsoft.com/mssql/server:2022-latest
-        environment:
-          MSSQL_SA_PASSWORD: Test!1234
-          ACCEPT_EULA: Y
-    steps:
-      - checkout
-      - run: dotnet test src/mathtone-magic.sln
-  repack-projects:
-    docker:
-      - image: mcr.microsoft.com/dotnet/sdk:6.0
-      - image: postgres
-        environment:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: test1234
-      - image: mcr.microsoft.com/mssql/server:2022-latest
-        environment:
-          MSSQL_SA_PASSWORD: Test!1234
-          ACCEPT_EULA: Y
-    working_directory: /mnt/ramdisk
-    steps:
-      - checkout
-      - run: dotnet restore src/mathtone-magic.sln
-      - run: dotnet tool install --global dotnet-search
-      - run: 
-          name: Add Nuget
-          command: dotnet nuget add source ~/packages --name Local
-      ################## CORE PROJECTS ##################
-      - pack-proj:
-          proj: src/sdk/Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
-      - pack-proj:
-          proj: src/sdk/Mathtone.Sdk.Logging/Mathtone.Sdk.Logging.csproj
-      - pack-proj:
-          proj: src/sdk/Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
-      - pack-proj:
-          proj: src/sdk/Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
-      ################## TESTING.XUNIT ##################
-      - swapref:
-          proj: src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
-          ref: ../Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
-          pkg: Mathtone.Sdk.Common
-      - swapref:
-          proj: src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
-          ref: ../Mathtone.Sdk.Logging/Mathtone.Sdk.Logging.csproj
-          pkg: Mathtone.Sdk.Logging
-      - swapref:
-          proj: src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
-          ref: ../Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
-          pkg: Mathtone.Sdk.Utilities
-      - pack-proj:
-          proj: src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
-      ################## DATA ACCESS (SQL) ##################
-      - swapref:
-          proj: src/sdk/Mathtone.Sdk.Data.Sql/Mathtone.Sdk.Data.Sql.csproj
-          ref: ../Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
-          pkg: Mathtone.Sdk.Data
-      - swapref:
-          proj: src/sdk/Mathtone.Sdk.Data.Sql/Mathtone.Sdk.Data.Sql.csproj
-          ref: ../Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
-          pkg: Mathtone.Sdk.Utilities
-      - pack-proj:
-          proj: src/sdk/Mathtone.Sdk.Data.Sql/Mathtone.Sdk.Data.Sql.csproj
-      ################## DATA ACCESS (NPGSQL) ##################
-      - swapref:
-          proj: src/sdk/Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
-          ref: ../Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
-          pkg: Mathtone.Sdk.Data
-      - swapref:
-          proj: src/sdk/Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
-          ref: ../Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
-          pkg: Mathtone.Sdk.Utilities
-      - pack-proj:
-          proj: src/sdk/Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
-      ################## UNIT TESTS ##################
-      - swapref:
-          proj: src/tests/Mathtone.Sdk.Common.Tests/Mathtone.Sdk.Common.Tests.csproj
-          ref: ../../sdk/Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
-          pkg: Mathtone.Sdk.Common
-
-      - swapref:
-          proj: src/tests/Mathtone.Sdk.Logging.Tests/Mathtone.Sdk.Logging.Tests.csproj
-          ref: ../../sdk/Mathtone.Sdk.Logging/Mathtone.Sdk.Logging.csproj
-          pkg: Mathtone.Sdk.Logging
-
-      - swapref:
-          proj: src/tests/Mathtone.Sdk.Utilities.Tests/Mathtone.Sdk.Utilities.Tests.csproj
-          ref: ../../sdk/Mathtone.Sdk.Utilities/Mathtone.Sdk.Logging.csproj
-          pkg: Mathtone.Sdk.Utilities
-      
-      - swapref:
-          proj: src/tests/Mathtone.Sdk.Utilities.Tests/Mathtone.Sdk.Utilities.Tests.csproj
-          ref: ../../sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
-          pkg: Mathtone.Sdk.Testing.Xunit
-
-      - swapref:
-          proj: src/tests/Mathtone.Sdk.Testing.Xunit.Tests/Mathtone.Sdk.Testing.Xunit.Tests.csproj
-          ref: ../../sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
-          pkg: Mathtone.Sdk.Testing.Xunit
-
-      - swapref:
-          proj: src/tests/Mathtone.Sdk.Testing.Xunit.Tests/Mathtone.Sdk.Testing.Xunit.Tests.csproj
-          ref: ../../sdk/Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
-          pkg: Mathtone.Sdk.Utilities
-
-      - swapref:
-          proj: src/tests/Mathtone.Sdk.Data.Tests/Mathtone.Sdk.Data.Tests.csproj
-          ref: ../../sdk/Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
-          pkg: Mathtone.Sdk.Utilities
-      - swapref:
-          proj: src/tests/Mathtone.Sdk.Data.Tests/Mathtone.Sdk.Data.Tests.csproj
-          ref: ../../sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
-          pkg: Mathtone.Sdk.Testing.Xunit
-      - swapref:
-          proj: src/tests/Mathtone.Sdk.Data.Tests/Mathtone.Sdk.Data.Tests.csproj
-          ref: ../../sdk/Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
-          pkg: Mathtone.Sdk.Data
-
-      - swapref:
-          proj: src/tests/Mathtone.Sdk.Data.Sql.Tests/Mathtone.Sdk.Data.Sql.Tests.csproj
-          ref: ../../sdk/Mathtone.Sdk.Data.Sql/Mathtone.Sdk.Data.Sql.csproj
-          pkg: Mathtone.Sdk.Data.Sql
-
-      - swapref:
-          proj: src/tests/Mathtone.Sdk.Data.Npgsql.Tests/Mathtone.Sdk.Data.Npgsql.Tests.csproj
-          ref: ../../sdk/Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
-          pkg: Mathtone.Sdk.Data.Npgsql
-
-      - swapref:
-          proj: src/tests/Mathtone.Sdk.Data.Sql.Tests/Mathtone.Sdk.Data.Sql.Tests.csproj
-          ref: ../../sdk/Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
-          pkg: Mathtone.Sdk.Utilities.Sql
-
-      - swapref:
-          proj: src/tests/Mathtone.Sdk.Data.Npgsql.Tests/Mathtone.Sdk.Data.Npgsql.Tests.csproj
-          ref: ../../sdk/Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
-          pkg: Mathtone.Sdk.Utilities.Sql
-
-      # - swapref:
-      #     proj: src/tests/Mathtone.Sdk.Data.Npgsql.Tests/Mathtone.Sdk.Data.Npgsql.Tests.csproj
-      #     ref: ../../sdk/Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
-      #     pkg: Mathtone.Sdk.Data.Npgsql
-      - run: dotnet restore src/mathtone-magic.sln
-      # - 
-      # - run: dotnet test src/tests/Mathtone.Sdk.Common.Tests/Mathtone.Sdk.Common.Tests.csproj --configuration Release
-      # - run: dotnet test src/tests/Mathtone.Sdk.Utilities.Tests/Mathtone.Sdk.Utilities.Tests.csproj --configuration Release
-      # - run: dotnet test src/tests/Mathtone.Sdk.Logging.Tests/Mathtone.Sdk.Logging.Tests.csproj --configuration Release
-      # - run: dotnet test src/tests/Mathtone.Sdk.Data.Tests/Mathtone.Sdk.Data.Tests.csproj --configuration Release
-      # - run: dotnet test src/tests/Mathtone.Sdk.Data.Sql.Tests/Mathtone.Sdk.Data.Sql.Tests.csproj --configuration Release
-      - run: dotnet test src/tests/Mathtone.Sdk.Data.Npgsql.Tests/Mathtone.Sdk.Data.Npgsql.Tests.csproj --configuration Release
-      # - run:
-      #     name: Build & Test Solution (Release)
-      #     command: dotnet test src/mathtone-magic.sln --configuration Release #--results-directory test-results --logger "trx;logfilename=mytests.trx"
-      # swap Mathtone.Sdk.Data.Npgsql
-      #- swapref:
-      #    proj: src/sdk/Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
-      #    ref: ../Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
-      #    pkg: Mathtone.Sdk.Data
-      #- swapref:
-      #    proj: src/sdk/Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
-      #    ref: ../Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
-      #    pkg: Mathtone.Sdk.Data
-      ## swap Testing
-      #- swapref:
-      #    proj: src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
-      #    ref: ../Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
-      #    pkg: Mathtone.Sdk.Common
-      #- swapref:
-      #    proj: src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
-      #    ref: ../Mathtone.Sdk.Logging/Mathtone.Sdk.Logging.csproj
-      #    pkg: Mathtone.Sdk.Logging
-      #- swapref:
-      #    proj: src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
-      #    ref: ../Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
-      #    pkg: Mathtone.Sdk.Utilities
-      #- run: dotnet restore src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
-      #- pack-proj:
-      #    proj: src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
-      #swap test projects
-     
-      #- swapref:
-      #    proj: src/tests/Mathtone.Sdk.Testing.Xunit.Tests/Mathtone.Sdk.Testing.Xunit.Tests.csproj
-      #    ref: ../sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
-      #    pkg: Mathtone.Sdk.Testing.Xunit
-          
-      #- swapref:
-      #    proj: src/tests/Mathtone.Sdk.Data.Npgsql.Tests/Mathtone.Sdk.Data.Npgsql.Tests.csproj
-      #    ref: ../Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
-      #    pkg: Mathtone.Sdk.Data.Npgsql
-      #- swapref:
-      #    proj: src/tests/Mathtone.Sdk.Data.Npgsql.Tests/Mathtone.Sdk.Data.Npgsql.Tests.csproj
-      #    ref: ../Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
-      #    pkg: Mathtone.Sdk.Testing.Xunit
-
-      #- swapref:
-      #    proj: src/tests/Mathtone.Sdk.Data.Npgsql.Tests/Mathtone.Sdk.Data.Npgsql.Tests.csproj
-      #    ref: ../Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
-      #    pkg: Mathtone.Sdk.Data.Npgsql
-      #- swapref:
-      #    proj: src/tests/Mathtone.Sdk.Data.Npgsql.Tests/Mathtone.Sdk.Data.Npgsql.Tests.csproj
-      #    ref: ../Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
-      #    pkg: Mathtone.Sdk.Testing.Xunit
-
-      #- swapref:
-      #    proj: src/tests/Mathtone.Sdk.Tests/Mathtone.Sdk.Tests.csproj
-      #    ref: ../Mathtone.Sdk/Mathtone.Sdk.csproj
-      #    pkg: Mathtone.Sdk
-      # - run: dotnet restore src/mathtone-magic.sln
-      # # - 
-      # - run:
-      #     name: Build & Test Solution (Release)
-      #     command: dotnet test src/mathtone-magic.sln --configuration Release #--results-directory test-results --logger "trx;logfilename=mytests.trx"
-      
-      - persist_to_workspace:
-          root: .
-          paths:
-            - packages
   publish-artifactory:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
@@ -298,47 +68,5 @@ jobs:
 workflows:
   build-release:
     jobs:
-      - prep-project
-      - run-unit-tests:
-          filters:
-            branches:
-               ignore:
-                  - /release.*/
-          context: MATHTONE_DEV
-          name: Run Unit Tests
-          requires:
-            - prep-project
-      - repack-projects:
-          filters:
-            branches:
-               only:
-                  - /release.*/
-          context: MATHTONE_DEV
-          name: Repack Project Refs
-          requires:
-            - prep-project
-      - publish-artifactory:
-          filters:
-            branches:
-               only:
-                  - /release.*/
-          context: MATHTONE_DEV
-          requires:
-            - Repack Project Refs
-      - approve-release:
-          filters:
-            branches:
-               only:
-                  - /release.*/
-          type: approval
-          name: Approve Release
-          requires:
-            - Repack Project Refs
-      - publish-nuget:
-          filters:
-            branches:
-               only:
-                  - /release.*/
-          context: MATHTONE_DEV
-          requires:
-            - Approve Release
+      - pack-core
+      
