--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,6 +70,7 @@ jobs:
     steps:
       - attach_workspace:
           at: .
+      - checkout
       - run: 
           name: Add Nuget
           command: dotnet nuget add source ~/packages --name Local
