--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,12 +37,23 @@ commands:
             fi
             
 jobs:
-  pack-core:
+  get-code:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
     working_directory: /mnt/ramdisk
     steps:
       - checkout
+      - persist_to_workspace:
+          root: .
+          paths:
+            - packages
+  pack-core:
+    docker:
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
+    working_directory: /mnt/ramdisk
+    steps:
+      - attach_workspace:
+          at: .
       - pack-proj:
           proj: src/sdk/Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
       - pack-proj:
@@ -70,7 +81,6 @@ jobs:
     steps:
       - attach_workspace:
           at: ./packages
-      - checkout
       - run: 
           name: Add Nuget
           command: dotnet nuget add source ~/packages --name Local
@@ -131,7 +141,10 @@ jobs:
 workflows:
   build-release:
     jobs:
-      - pack-core
+      - get-code
+      - pack-core:
+          requires:
+            - get-code
       - pack-sdk-data:
           requires:
             - pack-core
