--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,9 @@ jobs:
       - run: 
           name: Add Nuget
           command: dotnet nuget add source ~/packages --name Local
+      - run: 
+          name: Restore
+          command: dotnet restore
       - swapref:
           proj: src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
           ref: ../Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
