--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,6 +81,7 @@ jobs:
     steps:
       - attach_workspace:
           at: .
+      - run: ls 
       - run: 
           name: Add Nuget
           command: dotnet nuget add source ~/packages --name Local
